--- a/server/src/.env
+++ b/server/src/.env
@@ -1,9 +1,9 @@
 salaisuus = "seesamAukene"
-url = "mongodb+srv://pietari:yEJFGj@tapahtuma.ip0cq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+uri = "mongodb+srv://pietari:yEJFGj@tapahtuma.ip0cq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 apiKey = "53b3a7b0"
 apiSecret = "4vsPU6nTPoDUT2DB"
 clientUrl = ""
 clientUrlTest = "http://localhost:3000/"
-PORT = 3002
-GQL_PORT = 4000
-URL = https://aanestajaehdota.com
+PORT = 3003
+GQL_PORT = 4001
+URL = "https://aanestajaehdota.com"
